# irc

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
npcp/: channels.cpp  channels.hpp  ircserver.cpp  ircserver.hpp  main.cpp  message.cpp  message.hpp  process.cpp  process.hpp  rplfuncs.cpp  rplfuncs.hpp  users.cpp  users.hpp
test/: Makefile  alllog
test/tests/chirc/tests/: common.py
